<resources>
    <string name="action_settings">设置</string>
    <string name="sliding_menu_title">主菜单</string>
    <string name="welcome">欢迎</string>
    <string name="main_menu_home">首页</string>
    <string name="main_menu_sdin">采购</string>
    <string name="main_menu_sdout">销售</string>
    <string name="main_menu_sdtransport">物流</string>
    <string name="main_menu_finance">财务</string>
    <string name="main_menu_oa">行政办公</string>
    <string name="main_menu_hr">人力资源</string>
    <string name="main_menu_it">IT服务</string>
    <string name="main_menu_setting">程序设置</string>
    <string name="top_title_home">主页</string>
    <string name="top_title_init">初始化应用</string>
    <string name="top_title_navigation">主菜单</string>
    <string name="top_title_audit">我的审核</string>
    <string name="top_title_contact">联系人</string>
    <string name="top_title_settings">应用设置</string>
    <string name="top_title_customer_search">客户查询</string>
    <string name="top_title_product_search">商品查询</string>
    <string name="top_title_stock_search">库存查询</string>
    <string name="top_title_transport_search">发货查询</string>
    <string name="top_title_schedule">我的日程</string>
    <string name="top_title_schedule_detail">日程详情</string>
    <string name="top_title_outline_add">添加商品</string>
    <string name="top_title_add_product_cat">新建商品-选择类别</string>
    <string name="top_title_modify_product_cat">修改商品-选择类别</string>
    <string name="top_title_add_product_detail">新建商品-商品信息</string>
    <string name="top_title_modify_product_detail">修改商品-商品信息</string>
	<string name="top_title_outmanage">销售管理</string>
    <string name="app_name">EX</string>
    <string name="app_name_bak">Explore-android</string>
    <string name="menu_settings">Settings</string>
    <string name="list_nodata">没有数据</string>
    <string name="app_welcome">欢迎界面</string>
    <string name="text">Text</string>
    <string name="app_underline">Underline</string>
    <string name="app_yes">是</string>
    <string name="app_no">否</string>
    <string name="app_back">返回</string>
    <string name="app_save">保存</string>
    <string name="app_text">Text</string>
    <string name="app_test">测试</string>
    <string name="app_delete">删除</string>
    <string name="app_delete_success">删除成功</string>
    <string name="app_delete_failed">删除失败，请重试</string>
    <string name="app_new">新建</string>
    <string name="app_edit">修改</string>
    <string name="app_submit">提交</string>
    <string name="app_action_success">操作成功</string>
    <string name="app_action_failed">操作失败，请重试</string>
    <string name="app_loading">正在加载中&#8230;</string>
    <string name="app_date_text">2013,09,27</string>
    <string name="app_username_text">用户名</string>
    <string name="app_more_ch">更多</string>
    <string name="app_more_en">More</string>
    <string name="app_back_event_msg">再按一次后退键退出</string>
    <string name="app_null">null</string>
    <string name="app_pick_data">选择时间</string>
    <string name="app_data_null">未设置</string>
    <string name="app_stop_polling">停止轮询服务</string>
    <string name="app_next_step">下一步</string>
    <string name="app_finish">已完成</string>
    <string name="app_wait">等待</string>
    <string name="app_failed">失败</string>
    <string name="app_no_value">无</string>
    <string name="app_data_keyword">输入关键字</string>
    <string name="app_qrcode">扫码</string>
    <string name="app_user_action_failed">操作失败</string>
    <string name="app_user_action_retry">重试</string>
    <string name="app_user_action_know">知道了</string>
    <string name="gen_sts_new">新建</string>
    <string name="gen_sts_clo">锁定</string>
    <string name="gen_sts_run">可用</string>
    <string name="layout_list_nodata_title">没有数据</string>
    <string name="layout_list_nodata_fresh">刷新</string>
    <string name="download_sdcard_busy_dlg_title">"SD卡不可用"</string>
    <string name="download_no_sdcard_dlg_title">"SD卡不存在"</string>
    <string name="cannot_download">"无法下载"</string>
    <string name="scan_tips">将二维码或条码图片对准扫描框即可自动扫描</string>
    <string name="scan_init_camera">初始化相机</string>
    <string name="scan_code_init">正在初始化相机&#8230;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="init_product_category">初始化商品类别数据</string>
    <string name="init_location_data">初始化地理信息数据</string>
    <string name="setup_title">系統设置</string>
    <string name="setup_keep_login">自动登入</string>
    <string name="setup_keep_login_info">成功登录之后，下次登录跳过用户名、密码输入步骤</string>
    <string name="setup_save_login">保存登录信息</string>
    <string name="setup_save_logininfo">成功登录之后保存用户名和密码</string>
    <string name="setup_open_locationservice">开启定位服务</string>
    <string name="setup_clear_cache">清空缓存</string>
    <string name="setup_logout">注销当前账户</string>
    <string name="setup_receive_p2pinfo">接收推送信息</string>
    <string name="setup_msg_p2p_succeed">设置成功，重启后生效。</string>
    <string name="prefs_categoty_account">账号设置</string>
    <string name="prefs_account_save_login">保存登录信息</string>
    <string name="prefs_account_save_login_summary">成功登录之后保存用户名和密码</string>
    <string name="prefs_account_auto_login">自动登入</string>
    <string name="prefs_account_auto_login_summary">成功登录之后，下次登录跳过用户名、密码输入步骤</string>
    <string name="prefs_categoty_service">功能设置</string>
    <string name="prefs_service_receive_p2pinfo">接收推送信息</string>
    <string name="prefs_service_receive_p2pinfo_summary">定时接收服务器的推送消息</string>
    <string name="prefs_service_location">定位服务</string>
    <string name="prefs_service_location_summary">向服务器上传位置信息</string>
    <string name="prefs_account_logout">登出</string>
    <string name="prefs_account_logout_summary">注销当前账户</string>
    <string name="dialog_exit_title">退出Explore</string>
    <string name="dialog_exit_msg">点击确定退出程序，如不需要退出，请点取消</string>
    <string name="dialog_logout_title">注销Explore</string>
    <string name="dialog_logout_msg">点击确定注销登录，如不需要注销，请点取消</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_submit">提交</string>
    <string name="dialog_save">保存</string>
    <string name="dialog_add">添加</string>
    <string name="dialog_reset">重置</string>
    <string name="dialog_outsal_create_title">销售发货新建</string>
    <string name="dataloader_title_customer">查询客户</string>
    <string name="dataloader_title_vatto">查询客户</string>
    <string name="dataloader_title_default">选择数据</string>
    <string name="login_username">请输入用户名</string>
    <string name="login_password">请输入密码</string>
    <string name="login_setup_remname">记住用户名</string>
    <string name="login_title">登录Explore</string>
    <string name="login_info">explore.imwork.net</string>
    <string name="login_login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="register_title">设备注册</string>
    <string name="register_btn_text">注册</string>
    <string name="register_info">注册、版权等信息显示</string>
    <string name="register_statement">如果当前使用的是双卡双待手机，默认使用主卡注册</string>
    <string name="test_btn_crefile">创建配置文件</string>
    <string name="test_text">Explore Test</string>
    <string name="test_actv_hint">选择你需要的数据</string>
    <string name="test_db_cre_text">数据库创建测试</string>
    <string name="test_db_in_text">数据插入测试</string>
    <string name="test_db_query_text">数据库查询测试</string>
    <string name="test_db_del_text">数据库删除测试</string>
    <string name="test_setupurl_title">设置服务器地址</string>
    <string name="test_setupurl_submit">确认</string>
    <string name="test_setupurl_reset">重置</string>
    <string name="test_setupurl_default">使用默认地址</string>
	<string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="pull_to_refresh_nomore_data">没有更多数据了</string>
    <string name="pull_to_refresh_data_count">加载了<g id="part1">%1$s</g>条数据</string>
	<string name="pull_to_refresh_finish">数据已刷新</string>
    <string name="bottom_tab_menu1">主菜单</string>
    <string name="bottom_tab_menu2">日程</string>
    <string name="bottom_tab_menu3">通讯录</string>
    <string name="bottom_tab_menu4">审核</string>
    <string name="bottom_tab_menu5">更多</string>
    <string name="bottom_tab_text">0</string>
    <string name="contact_btn_fresh">更新联系人</string>
    <string name="contact_fresh_success">更新联系人成功</string>
    <string name="contact_fresh_dberroe">数据库错误，更新联系人失败</string>
    <string name="contact_avatar">头像</string>
    <string name="contact_name">姓名</string>
    <string name="contact_gender">性别</string>
    <string name="contact_gender_m">男</string>
    <string name="contact_gender_f">女</string>
    <string name="contact_mobile">手机</string>
    <string name="contact_email">邮箱</string>
    <string name="contact_department">部门</string>
    <string name="contact_positon">职位</string>
    <string name="contact_positonlevel">职级</string>
    <string name="contact_info_mobile">手机</string>
    <string name="contact_info_email">Email</string>
    <string name="contact_info_department">部门</string>
    <string name="contact_info_position">职位</string>
    <string name="contact_debtn_call">拨打电话</string>
    <string name="contact_debtn_msg">发送短息</string>
    <string name="home_icon_text">主菜单图标</string>
    <string name="home_item_title">标题</string>
    <string name="home_item_code">Code</string>
    <string name="schedule_view_title">当天日期详情</string>
    <string name="schedule_list_nodate">当天没有日程信息</string>
    <string name="schedule_schedule_time">时间段</string>
    <string name="schedule_schedule_title">标题</string>
    <string name="schedule_schedule_description">内容</string>
    <string name="week_mon">MON</string>
    <string name="week_tue">TUE</string>
    <string name="week_wed">WED</string>
    <string name="week_thu">THU</string>
    <string name="week_fri">FRI</string>
    <string name="week_sat">SAT</string>
    <string name="week_sun">SUN</string>
    <string name="audit_page_title">审核详情</string>
    <string name="audit_list_nodate">当前没有待审核的信息</string>
    <string name="audit_info_nodata">审核详情获取失败,请重试</string>
    <string name="audit_info_dept">部门</string>
    <string name="audit_info_billtype">单据类型</string>
    <string name="audit_info_crebyname">创建人</string>
    <string name="audit_info_crebytime">创建时间</string>
    <string name="audit_info_content">摘要</string>
    <string name="cusmodify_title_namecn">客户中文名</string>
    <string name="cusmodify_title_namecns">客户中文名简称</string>
    <string name="cusmodify_title_nameen">客户英文名</string>
    <string name="cusmodify_title_nameens">客户英文名简称</string>
    <string name="cusmodify_title_companycode">工商营业执照注册号</string>
    <string name="cusmodify_title_address_province">省份</string>
    <string name="cusmodify_title_address_city">城市</string>
    <string name="cusmodify_title_address_area">区域</string>
    <string name="cusmodify_title_address_addresstype">地址类型</string>
    <string name="cusmodify_title_address_isdefault">是否默认地址</string>
    <string name="cusmodify_title_address_address">详细地址</string>
    <string name="cusmodify_title_address_postcode">邮政编码</string>
    <string name="cusmodify_title_address_contactname">联系人</string>
    <string name="cusmodify_title_address_mtel">手机</string>
    <string name="cusmodify_title_address_tel">电话</string>
    <string name="cusmodify_title_address_fax">传真</string>
    <string name="cusmodify_title_address_email">EMAIL</string>
    <string name="cusmodify_title_address_remarks">备注</string>
    <string name="cusmodify_title_address_lng">经度</string>
    <string name="cusmodify_title_address_lat">纬度</string>
    <string name="cusmodify_get_location">获取GPS信息</string>
</resources>