<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#AAEEEEEE"
        android:paddingTop="3dp"
        android:paddingBottom="2dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/frag_audititem_crebyname"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/audit_info_crebyname" />
        
        <TextView
            android:id="@+id/frag_audititem_billtype"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/audit_info_billtype" />

        <TextView
            android:id="@+id/frag_audititem_crebytime"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/audit_info_crebytime" />

    </LinearLayout>

    <TextView
        android:id="@+id/frag_audititem_dept"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audit_info_dept" />

    <TextView
        android:id="@+id/frag_audititem_content"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audit_info_content" />

</LinearLayout>